--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -18,13 +18,20 @@
             android:id="@+id/top_layout"
             android:layout_width="fill_parent"
             android:layout_height="338dp">
-
-            <ImageView
-                android:id="@+id/img_thumbnail"
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="200dp"
-                android:scaleType="fitXY"
-                android:layout_marginBottom="50dp"/>
+                android:layout_marginBottom="50dp"
+                android:id="@+id/rlIMG"
+                >
+                <ImageView
+                    android:id="@+id/img_thumbnail"
+                    android:layout_width="fill_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
+                    />
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="fill_parent"
@@ -37,7 +44,7 @@
                 android:alpha="0.8"
                 android:textColor="#fff"
                 android:textSize="26sp"
-                android:layout_alignBottom="@+id/img_thumbnail"
+                android:layout_alignBottom="@+id/rlIMG"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
